--- a/app/views/addingvalue/current/project-items.html
+++ b/app/views/addingvalue/current/project-items.html
@@ -24,10 +24,6 @@
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-
-
-
-
             <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" aria-describedby="associated-works-hint">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -38,7 +34,7 @@
       <div id="project-items-hint" class="govuk-hint">
     </div>
 
-<p class="govuk-hint">Select all the items your project needs</p>
+<p class="govuk-hint">Storage facilities will only be funded as part of a bigger project and cannot be more than 50% of total grant funding. <br><br>Select all the items your project needs</p>
 
     <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
