Guidance and Start pages

--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -30,6 +30,7 @@
       <li>retail facilities (for example, shops and display cabinets)</li>
     </ul>
 <p>You can also buy storage as part of your project but it can only be up to 50% of the total grant funding.</p>
+<p>Storage only projects are not eligible for this grant.</p>
 <p>The minimum grant you can claim is £25,000 (40% of £62,500). The maximum grant is £300,000.</p>
 <h2 id="when-to-apply">When to apply</h2>
 <table class="govuk-table govuk-body">
