--- a/app/views/slurrystorage/current/guidance.html
+++ b/app/views/slurrystorage/current/guidance.html
@@ -1,12 +1,22 @@
 
-{% extends "./views/layouts/GUIDANCEADDINGVALUE.html" %}
+{% extends "./views/layouts/GUIDANCESLURRYSTORAGE.html" %}
 
 
 {% block guidance %}
 
-<div id="toc" class="toc govuk-!-margin-bottom-9"></div>
 
+
+
+
+<h3 class="call-to-action govuk-heading-s">Applies to England</h3>
+
+
+
+<div id="toc" class="toc govuk-!-margin-bottom-9"></div>
 <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
+
+
+
 
 <h2 id="who-can-apply">Who can apply</h2>
 
@@ -14,24 +24,23 @@
 
 <p>You can apply if you:</p>
   <ul class="govuk-list govuk-list--bullet">
-  <li>are a grower or producer of agricultural of horticultural produce</li>
-  <li>are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers</li>
-  <li>will do the grant-funded work in England</li>
-  <li>estimate the project costs are over £62,500</li>
+  <li>are a dairy, beef or pig farmer with an existing slurry system </li>
+  <li>your business is registered in England or you will do the grant-funded work in England </li>
+  <li>estimate the project costs are over £50,000 </li>
   </ul>
 
 
-
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
-  <p>The grant can pay up to 40% of the costs for:</p>
+  <p>The grant can pay up to 50% of the costs for replacing, reconstructing or adding to storage that:</p>
     <ul>
-      <li>processing equipment, machinery and facilities (for example, equipment and machinery for bagging or bottling lines, meat cutting lines or vegetable washing and sorting, plus associated refrigeration, auto-packing or handling/palletising facilities)</li>
-      <li>constructing or improving buildings (for example, a new building for cheese making)</li>
-      <li>retail facilities (for example, shops and display cabinets)</li>
+      <li>has at least 6 months’ capacity (you can choose to go beyond 6 months but the grant will only cover up to 6 months)</li>
+      <li>is covered by an impermeable cover</li>
     </ul>
-<p>You can also buy storage as part of your project but it can only be up to 50% of the total grant funding.</p>
-<p>The minimum grant you can claim is £25,000 (40% of £62,500). The maximum grant is £300,000.</p>
+
+<p>Projects to increase slurry storage capacity because of an increase in livestock numbers are not funded by the grant. </p>
+<p>The minimum grant you can claim is £25,000 (50% of £50,000). The maximum grant is £250,000. </p>
 <h2 id="when-to-apply">When to apply</h2>
+
 <table class="govuk-table govuk-body">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
@@ -49,12 +58,12 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Full application</td>
       <td class="govuk-table__cell">10 May 2022</td>
-      <td class="govuk-table__cell">31 January 2024</td>
+      <td class="govuk-table__cell">31 January 2022</td>
     </tr>
   </tbody>
 </table>
 
-<p>You must have secured planning permission before you submit a full application.</p>
+<p>You must have applied for planning permission before you submit a full application. Any planning permission must be in place by 31 December 2022. </p>
 <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
 <p>Before you start the project, you can:</p>
 
@@ -70,7 +79,7 @@
 <p>You’ll need:</p>
 <ul>
   <li>information about your business (for example, number of employees, turnover)</li>
-  <li>information about the project (for example, the types of products being processed and how you will add value, the project impact)</li>
+  <li>information about the project (for example, the type of storage, the capacity, the type of cover)</li>
   <li>a list of the items you’d like to buy for the project</li>
   <li>an estimate of the total cost of the items</li>
 </ul>
@@ -78,10 +87,11 @@
 <p>After you have gone through the checker, you’ll get a score showing how well your project fits the funding priorities.</p>
 <p>RPA wants to fund projects that: </p>
 <ul>
-  <li>improve processing and supply chains</li>
-  <li>improve the environment</li>
-  <li>encourage collaboration and partnerships</li>
-  <li>grow your business</li>
+  <li>improve farm productivity</li>
+  <li>increase nutrient use efficiency</li>
+  <li>improve water quality</li>
+  <li>improve air quality</li>
+  <li>reduce greenhouse gas emissions</li>
 </ul>
 
 <p>When you are happy with your score, you can submit your details to the RPA.</p>
@@ -91,10 +101,18 @@
 
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form.</p>
-<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Adding Value grant manual</a> before you submit a full application.</p>
+<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Slurry Infrastructure grant manual</a> before you submit a full application.</p>
 <p>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</p>
 <p>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
 <br/>
+
+<div class="app-c-published-dates " lang="en">
+  Published 1 April 2022
+  <br>Last updated 1 April 2022
+  <a href="#history">+show all updates</a>
+</div>
+<br>
+
 
 {% endblock %}
