--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -40,11 +40,10 @@
           <h2 class="govuk-heading-m">Who can apply</h2>
           <p>You can apply if you:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>are a grower or producer of agricultural or horticultural produce</li>
-            <li>are a business processing agricultural or horticultural products that is at least 50% owned by agricultural or horticultural producers</li>
-            <li>will do the grant-funded work in England</li>
-            <li>estimate the project costs are over £62,500</li>
-            </ul>
+            <li>are a dairy, beef or pig farmer with an existing slurry system</li>
+            <li>your business is registered in England or you will do the grant-funded work in England</li>
+            <li>estimate the project costs are over £50,000 </li>
+          </ul>
         </div>
 
       <div class="govuk-inset-text">
@@ -67,7 +66,7 @@
       <p>To  use the checker,  you need:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>information about your business (for example, number of employees and turnover)</li>
-        <li>information about the project (for example, the types of products being processed and how you will add value, the impact the project will have)</li>
+        <li>information about the project (for example, the type of storage, the volume, the type of cover)</li>
         <li>a list of the items you’d like to buy for the project</li>
         <li>an estimate of the total cost of the items</li>
       </ul>
