--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -20,7 +20,7 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state">Guidance: Farming Transformation Fund Slurry Storage grant</a></p>
+        <a href='slurrystorage/current/guidance' class="govuk-link--no-visited-state">Guidance: Farming Transformation Fund Slurry Infrastructure Grant</a></p>
           <p class='govuk-list app-list--definition'>
             <a href='#' class="govuk-link--no-visited-state">Start page</a><br>
             Specialist start page, hosted on GOV.UK</p>
