--- a/app/views/slurrystorage/current/country.html
+++ b/app/views/slurrystorage/current/country.html
@@ -32,7 +32,7 @@
 
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div id="changed-name-hint" class="govuk-hint">
-      The site where the work will happen
+      The location of the slurry store
     </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="country" name="country" type="radio" value="yes" data-aria-controls="conditional-country-postcode" {{ checked("country", "yes") }}>
@@ -49,7 +49,7 @@
             </div>
           </fieldset>
         </div>
-      
+
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
 
