--- a/app/views/slurrystorage/current/business-type-fail.html
+++ b/app/views/slurrystorage/current/business-type-fail.html
@@ -26,11 +26,9 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for businesses who: </p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>are agricultural or horticultural growers or producers</li>
-        <li>are a separate processing business at least 50% owned by growers or producers of agricultural or horticultural produce</li>
-      </ul>
+      <p class="govuk-body">This grant is for pig, beef or dairy farmers.<br>
+Poultry, arable-only, contractors and horticultural growers are not currently eligible.</p>
+
 
       <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
          See other grants you may be eligible for.
