--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -22,7 +22,7 @@
         <p class='govuk-list app-list--definition'>
         <a href='slurrystorage/current/guidance' class="govuk-link--no-visited-state">Guidance: Farming Transformation Fund Slurry Infrastructure Grant</a></p>
           <p class='govuk-list app-list--definition'>
-            <a href='#' class="govuk-link--no-visited-state">Start page</a><br>
+            <a href='slurrystorage/current/start' class="govuk-link--no-visited-state">Start page</a><br>
             Specialist start page, hosted on GOV.UK</p>
 
         <p class='govuk-list app-list--definition'>
@@ -35,7 +35,7 @@
                             <p class='govuk-list app-list--definition'>
                               <a href='slurrystorage/current/business' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
                               This version was not tested yet<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 30 March 2022<br/>
+                                <span class="govuk-body govuk-!-font-size-14">#Last updated on 12 April 2022<br/>
                                 </span></p>
 
       </div>
