GRANTS-88, GRANTS-90, GRANTS-12, GRANTS-100

--- a/app/views/slurrystorage/current/legal-status-fail.html
+++ b/app/views/slurrystorage/current/legal-status-fail.html
@@ -57,7 +57,8 @@
             iconFallbackText: 'Warning'
         }) }}
 
-<p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
+<p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
+
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
     </div>
   </div>
