--- a/app/views/slurrystorage/current/slurry-storage-fail.html
+++ b/app/views/slurrystorage/current/slurry-storage-fail.html
@@ -14,7 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="business-type">Back</a>
+  <a class="govuk-back-link" href="slurry-storage">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,15 +26,14 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for pig, beef or dairy farmers.<br>
-Poultry, arable-only, contractors and horticultural growers are not currently eligible.</p>
+      <p>Only slurry stores located on the same farm are eligbile for this grant.<br><br></p>
 
 
-      <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
-         See other grants you may be eligible for.
-      </a>
-      </div>
 
+
+      <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
+
+    </div>
   </div>
 
 {% endblock %}
