--- a/app/views/slurrystorage/current/system-type.html
+++ b/app/views/slurrystorage/current/system-type.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-What is your business?
+What is your current manure management system?
 {% endblock %}
 
 {% block beforeContent %}
@@ -22,12 +22,12 @@ What is your business?
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-              {{ govukCheckboxes({
-                  idPrefix: 'b-type',
-                  name: 'b-type',
+              {{ govukRadios({
+                  idPrefix: 'systemtype',
+                  name: 'systemtype',
                   fieldset: {
                       legend: {
-                          text: 'What type of farmer are you?',
+                          text: 'What is your current manure management system?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -36,29 +36,28 @@ What is your business?
 
                   items: [
                 {
-                  value: "Pig",
-                  text: "Pig",
-                  checked: checked("b-type", "Pig")
+                  value: "Slurry-based system only",
+                  text: "Slurry-based system only",
+                  checked: checked("systemtype", "Slurry-based system only")
                 },
 
                 {
-                  value: "Beef",
-                  text: "Beef",
-                  checked: checked("b-type", "Beef")
-                },
-                {
-                  value: "Dairy",
-                  text: "Dairy",
-                  checked: checked("b-type", "Dairy")
+                  value: "Straw-bedded system with slurry production",
+                  text: "Straw-bedded system with slurry production",
+                  checked: checked("systemtype", "Straw-bedded system with slurry production")
                 },
 
                 {
-                  divider: "or"
+                  value: "straw-bedded system",
+                  text: "Straw-bedded system that does not produce slurry",
+                  checked: checked("systemtype", "straw-bedded system")
                 },
+
+
                 {
-                  value: "None2",
-                  text: "None of the above",
-                  checked: checked("b-type", "None2"),
+                  value: "no system",
+                  text: "I do not have a system",
+                  checked: checked("systemtype", "no system"),
                   behaviour: "exclusive"
                 }
               ]
@@ -75,9 +74,10 @@ What is your business?
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for pig, beef or dairy farmers.<br><br>
-            Poultry, arable-only, contractors and horticultural growers are not currently eligible.
-          </p>
+          <p class="govuk-body">This grant is for farmers currently for
+farmers currently using a system that produces slurry.
+<br><br>
+Slurry is a liquid or semi-liquid matter composed of excrete produced by livestock whilst in a yard or building. </p>
      </div>
    </div>
 
