GRANTS-108, GRANTS-110, GRANTS-112, GRANTS-114

--- a/app/views/slurrystorage/current/livestock-numbers-fail.html
+++ b/app/views/slurrystorage/current/livestock-numbers-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Planned size storage - You cannot apply for a grant from this scheme
+  Livestock numbers fail - You cannot apply for a grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="planned-size-storage">Back</a>
+  <a class="govuk-back-link" href="livestock-numbers">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,14 +26,8 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is to: <br>
-        <ul class="govuk-body">
-          <li>expand current storage levels	to 	6 months</li>
-          <li>make your storage serviceable if capacity is already 6 months or more</li>
-        </ul>
-      </p>
-
-<br>
+      <p class="govuk-body">Grants cannot be used to increase slurry storage capacity to accommodate an increase in livestock numbers.</p>
+      <br>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
       </div>
 
