GRANTS-116, GRANTS-118, GRANTS-120, GRANTS-122, GRANTS-124, GRANTS-126, GRANTS-128, GRANTS-130

--- a/app/views/slurrystorage/current/tenancy.html
+++ b/app/views/slurrystorage/current/tenancy.html
@@ -38,7 +38,7 @@
                       }
                   },
                   hint: {
-                    text: "The site where the work will happen  "
+                    text: "The location of the slurry store"
                 },
 
                   items: [
@@ -69,7 +69,7 @@
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Eligibility</span>
             </h2>
-            <p>You must own the land or have a tenancy in place until 2028 before starting the project.</p>
+            <p>You must own the land or have a tenancy in place for 5 years after the grant is approved.</p>
             <a href="#">
             </a>
 
