--- a/app/views/slurrystorage/current/reference-number.html
+++ b/app/views/slurrystorage/current/reference-number.html
@@ -23,7 +23,7 @@
         Details submitted
        </h1>
     <div class="govuk-panel__body">
-      Your reference number<br><strong>AV-VMA-A54</strong>
+      Your reference number<br><strong>SI-VMA-A54</strong>
     </div>
    </div>
 
