--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -13,7 +13,7 @@
 
 
 <h1 class="govuk-heading-xl">
-  Slurry storage prototype admin
+  Slurry infrastructure prototype admin
 </h1>
 
       <div class="proto-admin">
