--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="slurrystorage">Slurry storage grant</a>
+      <td class="govuk-table__cell"><a href="slurrystorage">Slurry infrastructure grant</a>
         </td>
       <td class="govuk-table__cell">Checker (v1 - last updated on 15 April 2022)</td>
     </tr>
