--- a/app/views/slurrystorage/current/existing-size-storage.html
+++ b/app/views/slurrystorage/current/existing-size-storage.html
@@ -48,7 +48,7 @@ Existing size storage
                 },
                 {
                   value: "At least 6 months",
-                  text: "At least 6 months",
+                  text: "6 months or more",
                   checked: checked("existing-size-storage", "At least 6 months")
                 }
               ]
