--- a/app/views/slurrystorage/current/livestock-numbers.html
+++ b/app/views/slurrystorage/current/livestock-numbers.html
@@ -26,7 +26,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Is the storage to accommodate an increase in livestock numbers? 
+                Is the storage to accommodate an increase in livestock numbers?
               </h1>
             </legend>
 
@@ -59,7 +59,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Grants cannot be used to increase slurry storage capacity to accommodate an increase in livestock numbers.</p>
+          <p>This grant cannot be used to increase slurry storage capacity to accommodate an increase in livestock numbers.</p>
           <a href="#">
           </a>
 
