--- a/app/views/slurrystorage/current/planned-size-storage.html
+++ b/app/views/slurrystorage/current/planned-size-storage.html
@@ -66,7 +66,7 @@ Planned size storage
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">This grant is to expand current storage levels to 6 months.<br><br>
-                                If your storage has more than 6 months’ capacity, you will only get a grant on the first 6 months</p>
+                                If your storage has more than 6 months’ capacity, the grant will only cover up to 6 months.</p>
      </div>
    </div>
 
