--- a/app/views/slurrystorage/current/project-type.html
+++ b/app/views/slurrystorage/current/project-type.html
@@ -79,7 +79,7 @@ Project type
           <ul class="govuk-body">
             <li>building a new store</li>
             <li>expanding an existing store</li>
-            <li>reconstructing an existing store that is no longer serviceable. </li>
+            <li>reconstructing an existing store that is no longer serviceable </li>
           </ul>
       </div>
    </div>
