--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -83,13 +83,13 @@ application will time out and you  will have to start again. </p>
     <li>Monday to Friday, 9am to 5pm (except public holidays)</li>
     </ul>
     <p class="govuk-body">
-    <a class="govuk-link" href="#">Find out about call charges</a>
+    <a class="govuk-link" href="https://www.gov.uk/call-charges">Find out about call charges</a>
     </p>
 
     <h3 class="govuk-heading-s">Email</h3>
 
     <ul class="govuk-list">
-    <li><a class="govuk-link" href="#">FTF@rpa.gov.uk</a></li>
+    <li><a class="govuk-link" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></li>
 
     </ul>
     </div>
