--- a/app/views/slurrystorage/current/system-type.html
+++ b/app/views/slurrystorage/current/system-type.html
@@ -37,23 +37,22 @@ What is your current manure management system?
                   items: [
                 {
                   value: "Slurry-based system only",
-                  text: "Slurry-based system only",
+                  text: "Slurry-based system",
                   checked: checked("systemtype", "Slurry-based system only")
                 },
 
                 {
                   value: "Straw-bedded system with slurry production",
-                  text: "Straw-bedded system with slurry production",
+                  text: "Farm-yard manure and slurry system",
                   checked: checked("systemtype", "Straw-bedded system with slurry production")
                 },
 
                 {
                   value: "straw-bedded system",
-                  text: "Straw-bedded system that does not produce slurry",
+                  text: "Farm-yard manure system that does not produce slurry",
                   checked: checked("systemtype", "straw-bedded system")
                 },
-
-
+                
                 {
                   value: "no system",
                   text: "I do not have a system",
@@ -77,7 +76,7 @@ What is your current manure management system?
           <p class="govuk-body">This grant is for farmers currently for
 farmers currently using a system that produces slurry.
 <br><br>
-Slurry is a liquid or semi-liquid matter composed of excrete produced by livestock whilst in a yard or building. </p>
+Slurry is a liquid organic manure produced by livestock (other than poultry) while in a yard or building. It includes animal bedding and water that drains from areas where animals are kept. </p>
      </div>
    </div>
 
