--- a/app/views/slurrystorage/current/project-type.html
+++ b/app/views/slurrystorage/current/project-type.html
@@ -27,7 +27,7 @@ Project type
                   name: 'projecttype',
                   fieldset: {
                       legend: {
-                          text: 'How will you increase storage capacity?',
+                          text: 'How will you increase your storage capacity?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -81,6 +81,7 @@ Project type
             <li>expanding an existing store</li>
             <li>reconstructing an existing store that is no longer serviceable </li>
           </ul>
+          <p class="govuk-body">A store may be non-serviceable because it was built before 1991 and was exempt from the Silage, Slurry and Agricultural Fuel Oil Regulations (SSAFO) requirements or because it has reached the end of its design life (for example, it may be susceptible to leaks or failure).</p>
       </div>
    </div>
 
