--- a/app/views/slurrystorage/current/covers.html
+++ b/app/views/slurrystorage/current/covers.html
@@ -66,7 +66,9 @@ Covers
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">Stores must have an impermeable cover unless the slurry is treated with acidification.<br><br>
-            Acidification is the use of acid treatment to lower the PH value of slurry  to stabilise ammonia emissions.</p>
+            Acidification is the use of acid treatment to lower the PH value of slurry  to stabilise ammonia emissions.<br><br>
+          Slurry acidification systems are not eligible for funding through this grant.</p>
+
       </div>
    </div>
 
