--- a/app/views/slurrystorage/current/system-type.html
+++ b/app/views/slurrystorage/current/system-type.html
@@ -32,8 +32,7 @@ What is your current manure management system?
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-
-
+                  
                   items: [
                 {
                   value: "Slurry-based system only",
@@ -52,10 +51,10 @@ What is your current manure management system?
                   text: "Farm-yard manure system that does not produce slurry",
                   checked: checked("systemtype", "straw-bedded system")
                 },
-                
+
                 {
                   value: "no system",
-                  text: "I do not have a system",
+                  text: "I do not have a slurry system",
                   checked: checked("systemtype", "no system"),
                   behaviour: "exclusive"
                 }
@@ -73,8 +72,7 @@ What is your current manure management system?
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for farmers currently for
-farmers currently using a system that produces slurry.
+          <p class="govuk-body">This grant is for farmers currently using a system that produces slurry.
 <br><br>
 Slurry is a liquid organic manure produced by livestock (other than poultry) while in a yard or building. It includes animal bedding and water that drains from areas where animals are kept. </p>
      </div>
