--- a/app/views/slurrystorage/current/planned-size-storage.html
+++ b/app/views/slurrystorage/current/planned-size-storage.html
@@ -30,7 +30,7 @@ Planned size storage
           spellcheck: false,
           classes: "govuk-input--width-2",
           suffix: {
-            text: "months"
+            text: "month(s)"
             },
           label: {
             text: "Enter number of months"
